yaml_configs/homebox/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  type: LoadBalancer
  selector:
    app: homebox
  ports:
  - name: homebox
    port: 7745
    targetPort: 7745
