yaml_configs/homebox/00-homebox-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebox

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      name: homebox
  template:
    metadata:
      labels:
        name: homebox
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/hay-kot/homebox:latest
          ports:
          - containerPort: 7745
          volumeMounts:
          - mountPath: /data
            name: homebox-data
            subPath: data
      volumes:
      - name: homebox-data
        persistentVolumeClaim:
          claimName: homebox-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  type: LoadBalancer
  selector:
    app: homebox
  ports:
  - name: homebox
    port: 7745
    targetPort: 7745


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox-private
  namespace: homebox
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: homebox
spec:
  rules:
  - host: homebox.jsuri.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homebox
            port:
              number: 7745
  tls:
  - hosts:
    - homebox.jsuri.com # Change by your domain
    secretName: homebox-jsuri-com-tls
